<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="ST_TCLevel" Id="{a0032924-8f7f-43a6-af76-be93511dca3e}">
    <Declaration><![CDATA[TYPE ST_TCLevel :
STRUCT
	
		stGblParam: ST_TCSeqParam;
		fbTCLevelSeq: FB_TCLevelSeq;
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>